@@ -1,6 +1,8 @@
 v1.0.3 (Sep xx, 2005)
 
-	- OPML export/import.
+	- OPML export/import
+	- Support for simple content filtering (expression should be valid regexp)
+	- Reworked preferences dialog
 
 v1.0.2 (Sep 02, 2005)
 
